<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SportStesiyen</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_statistic">Statistic</string>
    <string name="title_account">Account</string>
    <string name="txt_dummy">Dummy</string>
    <string name="txt_error_fetch">Error Fetch</string>
    <string name="txt_no_internet">No Internet</string>
    <string name="txt_retry">Retry</string>
    <string name="txt_data_not_found">Data Not Found</string>
    <string name="txt_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string-array name="menuDetailTeams">
        <item>Description</item>
        <item>Stadium</item>
        <item>Jersey</item>
        <item>League</item>
    </string-array>

    <string name="txt_news_onboarding">News Sport</string>
    <string name="txt_category_onboarding">Category Sport</string>
    <string name="txt_score_onboarding">Score Sport</string>
    <string name="txt_data_player_onboarding">Data Player Sport</string>
    <string name="txt_next_onboarding">Next</string>
    <string name="txt_back_onboarding">Back</string>
    <string name="txt_skip_onboarding">Skip</string>
    <string name="txt_started_onboarding">Get Started</string>

    <string name="txt_login_intro">Hello,\nPlease Login Here</string>
    <string name="txt_login_new_register_click">Click Here</string>
    <string name="txt_login">Login</string>
    <string name="txt_register">Register</string>
    <string name="txt_register_intro">Halo,\nPlease Register Here</string>
    <string name="txt_username">Username</string>
    <string name="txt_email">Email</string>
    <string name="txt_email_invalid">Email Invalid</string>
    <string name="txt_password">Password</string>
    <string name="txt_username_not_blank">Username is Not Empty</string>
    <string name="txt_email_not_blank">Email is Not Empty</string>
    <string name="txt_phone_not_blank">Phone Number is Not Empty</string>
    <string name="txt_password_invalid">Password Invalid</string>
    <string name="txt_password_not_blank">Password is Not Empty</string>
    <string name="txt_password_not_same">Confirm Password is Not Same</string>
    <string name="txt_password_limit">Password must be 6 characters</string>
    <string name="txt_otp_verification">OTP Verification</string>
    <string name="txt_desc_input_otp">We will send you an\nOne Time Password on this phone number</string>
    <string name="txt_phone_invalid">Phone Number Invalid</string>
    <string name="txt_phone">Phone Number</string>
    <string name="txt_get_otp">Get OTP</string>
    <string name="txt_otp_verify"><![CDATA[Verify & Proceed]]></string>
    <string name="txt_desc_verify_otp">Enter the OTP sent to</string>
    <string name="txt_dummy_phone">081234567890</string>
    <string name="txt_resend_otp">Resend OTP</string>
    <string name="txt_error_verification_otp">Didn\'t receive the OTP ?</string>
    <string name="txt_login_new_register">Dont have account yet ? </string>
    <string name="txt_welcome">Welcome </string>

    <string name="txt_top_headline_news_home">Top Headline News</string>
    <string name="txt_everything_news_home">Domestic News sport</string>
    <string name="txt_banner_home">Banner Home</string>
    <string name="txt_show_all_list">Show All</string>
    <string name="txt_type_latest_home">Home</string>
    <string name="txt_type_latest_away">Away</string>
    <string name="txt_date_publish_home">2 days ago</string>
    <string name="txt_live_match_home">Live Match</string>
    <string name="txt_teams_league_home">Teams League</string>
    <string name="txt_since_home">Since</string>
    <string name="txt_source_news_detail">Source</string>
    <string name="txt_author_news_detail">Author</string>

    <string name="media_url_mp4">https://storage.googleapis.com/exoplayer-test-media-0/play.mp3</string>
    <string name="txt_desc_detail_events">Description</string>
    <string name="txt_league">League</string>
    <string name="txt_account">Account</string>
    <string name="txt_teams_kit">Team Kit</string>
    <string name="txt_code_number">+62</string>
    <string name="txt_statistic">Statistic Table</string>
    <string name="txt_pos_statistic">Pos</string>
    <string name="txt_club_statistic">Club</string>
    <string name="txt_played_statistic">P</string>
    <string name="txt_win_statistic">W</string>
    <string name="txt_draw_statistic">D</string>
    <string name="txt_lose_statistic">L</string>
    <string name="txt_gd_statistic">GD</string>
    <string name="txt_point_statistic">Pts</string>

    <string name="txt_change_password">Change Password</string>
    <string name="txt_old_password">Old Password</string>
    <string name="txt_new_password">New Password</string>
    <string name="txt_confirm_password">Confirm Password</string>
</resources>