<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.otp.inputotp.InputOtpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content_input_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/btn_get_otp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_logo_input_otp"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:src="@drawable/svg_sport_input_otp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_intro_input_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mulish_extrabold_800"
            android:text="@string/txt_otp_verification"
            android:textColor="@color/teal_200"
            android:textSize="26sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_logo_input_otp" />

        <TextView
            android:id="@+id/tv_desc_input_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/mulish_semibold_600"
            android:text="@string/txt_desc_input_otp"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_intro_input_otp" />

        <LinearLayout
            android:id="@+id/ll_input_phone_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_desc_input_otp">

            <TextView
                android:layout_width="60dp"
                android:layout_height="45dp"
                android:fontFamily="@font/mulish_bold_700"
                android:gravity="center"
                android:hint="@string/txt_code_number"
                android:padding="10dp"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPhone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="10dp"
                android:labelFor="@id/edt_otp_phone"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:errorContentDescription="@string/txt_phone_invalid">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_otp_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:fontFamily="@font/mulish_semibold_600"
                    android:hint="@string/txt_phone_number"
                    android:inputType="phone"
                    android:textCursorDrawable="@color/teal_200"
                    tools:ignore="SpeakableTextPresentCheck,TextFields,TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/btn_get_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_btn_primary"
        android:fontFamily="@font/mulish_bold_700"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/txt_get_otp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>